force-app/main/default/objects/LLC_BI__DocuSign_Envelope__c/LLC_BI__DocuSign_Envelope__c.object-meta.xml
<CustomObject>
    <label>DocuSign Envelope</label>
    <nameField>
        <label>DocuSignEnvelope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign_Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>