force-app/main/default/objects/LLC_BI__DocuSign_Envelope__c/fields/LLC_BI__Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Attachment_Id__c</fullName>
    <description>A reference to the attachment that was downloaded from DocuSign.</description>
    <label>Attachment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>