force-app/main/default/objects/LLC_BI__DocuSign_Envelope__c/fields/LLC_BI__Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Envelope_Id__c</fullName>
    <description>The DocuSign assigned envelope ID associated with the document.  For example &apos;cfd82621-5a7d-4d84-acdb-9b5ec2cfa9da&apos;. This value uniquely identifies a document at DocuSign.</description>
    <label>Envelope_Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>