force-app/main/default/objects/LLC_BI__DocuSign_Envelope__c/fields/LLC_BI__Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Related_Object_Id__c</fullName>
    <description>The SalesForce ID of the Related sObject that is associated with the envelope. This is not a lookup field and can reference an object of any type.</description>
    <label>Related Object Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>