force-app/main/default/objects/LLC_BI__DocuSign_Envelope__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>The DocuSign assigned Status of the document.

Example values:
- &apos;Created&apos;
- &apos;Deleted&apos;
- &apos;Sent&apos;
- &apos;Delivered&apos;
- &apos;Signed&apos;
- &apos;Completed&apos;
- &apos;Declined&apos;
- &apos;Voided&apos;
- &apos;TimedOut&apos;</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>