force-app/main/default/objects/LLC_BI__DocuSign_Envelope__c/fields/LLC_BI__Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The SalesForce ID of the template that was used to generate the envelope.</description>
    <label>Template</label>
    <referenceTo>LLC_BI__DocuSign_Template__c</referenceTo>
    <relationshipLabel>DocuSign Envelopes</relationshipLabel>
    <relationshipName>DocuSignEnvelopes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>